--- a/app/hackathon/package.json
+++ b/app/hackathon/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@types/redis": "^4.0.10",
+    "@types/socket.io": "^3.0.1",
     "ioredis": "^5.4.2",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
