--- a/app/hackathon/package.json
+++ b/app/hackathon/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/vertexai": "^1.9.2",
     "@types/redis": "^4.0.10",
     "@types/socket.io": "^3.0.1",
     "ioredis": "^5.4.2",
