インフラ設定の追加、Dockerfileの作成、メタデータの定義、Next.jsの設定更新、型定義の追加、WebSocket関連の定数の追加

--- a/app/hackathon/package.json
+++ b/app/hackathon/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/vertexai": "^1.9.2",
+    "@tanstack/react-query": "^5.66.0",
     "@types/redis": "^4.0.10",
     "@types/socket.io": "^3.0.1",
     "ioredis": "^5.4.2",
